Add gc chapter